<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">WRONG</string>
    <string name="menu_settings">Settings</string>
    <string name="question_alex">Rasputin supposedly cured the Tsar and Tsarina’s haemophiliac daughter Alexis.</string>
    <string name="question_literate">Rasputin was illiterate.</string>
    <string name="question_monk">Rasputin was a monk.</string>
    <string name="question_death">Rasputin predicted his own death - “If I am killed by my own people, by the peasants, then you will continue to rule in peace and harmony. However, if I am killed by the noble class, then within two years, you and your children and all the royal family will be no more.”</string>
    <string name="question_poison">Rasputin died of poison</string>
    <string name="previous_button">Previous Question</string>
    <string name="next_button">Next Question</string>
    <string name="cheat_button">(Cheat)</string>
    <string name="warning_text">Are you SURE you want to cheat?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgement_toast">Cheating is wrong. Hope you can live with that. You won the battle but lost the life war.</string>
    <string name="game_over">GAME OVER! </string>
    <string name="final_score">YOUR FINAL SCORE IS 0/5!</string>

</resources>
